Moved products EPs to new structure
